Mon Mar 24 15:19:47 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (rb_dump_backtrace_with_lines): fetch path of the
	  executable from /proc/self/exe on Linux.

Mon Mar 24 14:14:37 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* gc.c: Fix up default GC params by @csfrancis [fix GH-556]

Mon Mar 24 13:13:36 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (parse_debug_line_cu): explicitly specify signed char
	  because DWARF's line_Base is signed char and char maybe unsigned.
	  patched by Rei Odaira. [ruby-dev:48068] [Bug #9654]

Sun Mar 23 11:03:50 2014  Kohei Suzuki  <eagletmt@gmail.com>

	* vm_method.c (rb_method_entry_get_without_cache): me->klass is 0
	  for a method aliased in a module.  [ruby-core:61636] [Bug #9663]

Sun Mar 23 08:12:27 2014  Eric Wong  <e@80x24.org>

	* st.c (hash_pos): use bitwise AND to avoid slow modulo op
	  (new_size): power-of-two sizes for hash_pos change
	  (st_numhash): adjust for common keys due to lack of prime modulo
	  [Feature #9425]
	* hash.c (rb_any_hash): right shift for symbols
	* benchmark/bm_hash_aref_miss.rb: added to show improvement
	* benchmark/bm_hash_aref_sym_long.rb: ditto
	* benchmark/bm_hash_aref_str.rb: ditto
	* benchmark/bm_hash_aref_sym.rb: ditto
	* benchmark/bm_hash_ident_num.rb: added to prevent regression
	* benchmark/bm_hash_ident_obj.rb: ditto
	* benchmark/bm_hash_ident_str.rb: ditto
	* benchmark/bm_hash_ident_sym.rb: ditto

Sat Mar 22 22:56:45 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (fill_lines): compare the file names of object in which
	  symbols exist. [Bug #9654] [ruby-dev:48058]

Sat Mar 22 06:46:16 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/cgi/util.rb (escape_html, unescape_html): make synonyms
	  aliases instead of wrapper methods.

	* lib/cgi/util.rb (escape_element, unescape_element): ditto.
	  [Fixes GH-573]

Fri Mar 21 21:57:34 2014  Akinori MUSHA  <knu@iDaemons.org>

	* configure.in: Fix a build problem with clang and --with-opt-dir.